--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-TOKEN=NzIxNzY1MTkzOTg1Njg3NjIz.XuZTNg.kghS64KmdwK58pJPM5qyELj3mu0
+TOKEN=NzIxNzY1MTkzOTg1Njg3NjIz.Xulx7A.xdMDg2zmfgvj2AaFl7WVG38jNCQ
