--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   },
   "homepage": "https://github.com/arhammusheer/popn-bot#readme",
   "dependencies": {
+    "@discordjs/opus": "^0.3.2",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "morgan": "~1.9.1",
+    "ffmpeg": "0.0.4",
+    "ffmpeg-static": "^4.2.7",
     "handlebars-layouts": "^3.1.4",
-    "hbs": "^4.1.1"
+    "hbs": "^4.1.1",
+    "morgan": "~1.9.1",
+    "ytdl-core": "^3.2.2"
   }
 }
