--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.2.7",
+    "youtube-search": "^1.1.4",
     "ytdl-core": "^3.2.2"
   }
 }
