--- a/sample file.env
+++ b/sample file.env
@@ -2,3 +2,4 @@ TOKEN=<YOUR_DISCORD_BOT_TOKEN>
 LEVELS_CHANNEL_ID=<LEVELS_CHANNEL_ID>
 AUTOCLEAR_CHANNEL_ID=<AUTOCLEAR_CHANNEL_ID>
 SERVER_ADMIN_ID=<SERVER_ADMIN_ID>
+YOUTUBE_API_KEY=<YOUTUBE_API_V3_KEY>
